Fix #23072: Unable to add selection from locked layer
TODO now allows users to use any modifiable layer (superclass
`AbstractModifiableLayer`). As part of this, TODO now allows
`IPrimitive` instead of `OsmPrimitive` in `TodoListItem`.

Signed-off-by: Taylor Smock <tsmock@meta.com>